--- a/public/css/icinga/responsive.less
+++ b/public/css/icinga/responsive.less
@@ -81,14 +81,17 @@
 // Dashboard
 
 #layout.default-layout .dashboard > .container {
+  padding-right: @gutter;
   width: 50%;
 }
 
 #layout.wide-layout .dashboard > .container {
+  padding-right: @gutter;
   width: 33.33%;
 }
 
 #layout.twocols .dashboard > .container {
+  padding-right: 0;
   width: 100%;
 }
 
